// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`madness should change target 1`] = `
"*Игрок 1* использовал _Безумие_ на *Игрок 3*
\\[ 📖80 ]
*Игрок 3* рубанул *Игрок 3* _Оружием_ и нанёс *7.2* урона
\\[ Игрок 3 💥 💔-7.2/0.8 📖0 ]
_Безумие_ *Игрок 1*"
`;

exports[`madness should handle multiple casters 1`] = `
"*Игрок 1* использовал _Безумие_ на *Игрок 3*
\\[ 📖80 ]
*Игрок 2* использовал _Безумие_ на *Игрок 3*
\\[ 📖80 ]
*Игрок 3* рубанул *Игрок 3* _Оружием_ и нанёс *7.2* урона
\\[ Игрок 3 💥 💔-7.2/0.8 📖0 ]
_Безумие_ *Игрок 1*
_Безумие_ *Игрок 2*"
`;
